[tool.poetry]
name = "pgsrip"
version = "0.1.9"
description = "Rip your PGS subtitles"
authors = [
    "Rato",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ratoaq2/pgsrip"
keywords = [
    "video",
    "mkv",
    "subtitles",
    "rip",
    "srt",
    "pgs",
    "sup",
    "sub",
    "metadata",
    "movie",
    "episode",
    "tv",
    "shows",
    "series",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]

[tool.poetry.scripts]
pgsrip = "pgsrip.cli:pgsrip"

[tool.poetry.dependencies]
python = "^3.8.1"
babelfish = "^0.6.0"
cleanit = "^0.4.7"
click = "^8.1.3"
pysrt = "^1.1.2"
pytesseract = "^0.3.10"
numpy = "^1.24.2"
opencv-python = "^4.7.0"
trakit = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
mypy = ">=0.991,<1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
