[tool.poetry]
name = "pgsrip"
version = "0.1.13-dev"
description = "Rip your PGS subtitles"
authors = [
    "Rato",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ratoaq2/pgsrip"
keywords = [
    "video",
    "mkv",
    "subtitles",
    "rip",
    "srt",
    "pgs",
    "sup",
    "sub",
    "metadata",
    "movie",
    "episode",
    "tv",
    "shows",
    "series",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]

[tool.poetry.scripts]
pgsrip = "pgsrip.cli:pgsrip"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
babelfish = "^0.6.1"
cleanit = "^0.4.9"
click = "^8.2.1"
pysrt = "^1.1.2"
pytesseract = "^0.3.10"
numpy = "^2.2"
opencv-python = "^4.12.0"
trakit = "^0.2.3"
setuptools = ">=70.1,<81.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
flake8 = "^7.3.0"
flake8-import-order = "^0.19.2"
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
